--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ main {
 main h2 {
 	opacity: 0;							/*透明度。0は色が出ていない(0%)状態の事。*/
 	text-align: center;					/*文字をセンタリング*/
-	font-family: 'Tangerine', cursive, "ヒラギノ丸ゴ Pro", "Hiragino Maru Gothic Pro", "メイリオ", Meiryo, Osaka;
+	font-family: 'Tangerine', cursive, "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "メイリオ", Meiryo, Osaka;
 	font-weight: normal;				/*hタグはデフォルトで太字なので、これを標準にする*/
 	font-size: 4rem;					/*文字サイズ。remの単位についてはテンプレート内の解説をお読み下さい。*/
 	margin-bottom: 80px;				/*下に空けるスペース*/
