--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 	line-height: 2;		/*行間*/
 }
 
-/*▼よくわからん*/
+/*▼よくわからんnewsのとこ*/
 iframe{
 	font-family: "ヒラギノ明朝 Pro";	/*フォント種類*/
 	-webkit-text-size-adjust: none;
