--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@
 @import url("https://a-chaaa.github.io/rinakoteikoku/inview.css");
 
 
+/*newsページ(順番上下してるごめん！！！！！)
+---------------------------------------------------------------------------*/
+h2{
+	font-family: "ヒラギノ明朝 Pro";
+	font-size:20px;
+
 
 /*全体の設定
 ---------------------------------------------------------------------------*/
