--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
 	background: #6a171f;	/*背景色*/
 	color: #E5E5E5;	/*全体の文字色*/
 	line-height: 2;		/*行間*/
+	letter-spacing:10px; 　　　　　/**左右の文字感覚*/
 }
 
 
