--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ body {
 	-webkit-text-size-adjust: none;
 	background: #6a171f;	/*背景色*/
 	color: #E5E5E5;	/*全体の文字色*/
-	line-height: 2;		/*行間*/
-	letter-spacing:2px; 　　　　　/**左右の文字間隔*/
+	line-height: 4;		/*行間*/
+	/*letter-spacing:2px; 　　　　　/*左右の文字間隔*/
 }
 
 
