--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ h4,
 	background-color:#fff3de;
 	width:100%;
 	color:#b36d4d;
-	margin:0,0,0,20px;
+	margin:0;
 	padding-top:5px;
 	padding-bottom:5px;
 }
