--- a/style.css
+++ b/style.css
@@ -27,6 +27,11 @@ h2{
 	font-size:20px;
 }
 
+/*背景色を変える　　TOPのやつ
+---------------------------------------------------------------------------*/
+.explain{
+	margin:0;
+}
 
 /*全体の設定
 ---------------------------------------------------------------------------*/
