--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ a:hover {
 /*container。サイト全体を囲むブロック。
 ---------------------------------------------------------------------------*/
 #container {
-	margin: 0 auto;
+	margin:0;
 	max-width: 1400px;	/*最大幅。これ以上幅が広がらないように。*/
 	padding: 0 10px;	/*上下、左右へのブロック内の余白*/
 }
