--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ header #logo {
 /*mainブロック
 ---------------------------------------------------------------------------*/
 main {
+	margin:0;/*ここーーーーーーーーーーーーーーーーーーーー！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！*/
 	margin-bottom: 100px;	/*下に空けるスペース*/
 }
 
