--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ a:hover {
 #container {
 	margin:0;
 	max-width: 1400px;	/*最大幅。これ以上幅が広がらないように。*/
-	padding: 0 10px;	/*上下、左右へのブロック内の余白*/
+	padding: 0;	/*上下、左右へのブロック内の余白*/
 }
 
 /*headerブロック（ロゴが入った最上段のブロック）
