--- a/style.css
+++ b/style.css
@@ -559,81 +559,73 @@ ul.icon img:hover {
 @media screen and (min-width:800px) {
 
 
-/*全体の設定
----------------------------------------------------------------------------*/
+/*
+	
 html, body {
-	font-size: 18px;	/*基準となるフォントサイズの上書き*/
+	font-size: 18px;	
 }
 
-/*section全般の設定*/
+
 section + section {
-	padding-top: 50px;	/*sectionの間に空けるスペース*/
+	padding-top: 50px;	
 }
 
-/*container。サイト全体を囲むブロック。
----------------------------------------------------------------------------*/
+
 #container {
-	padding: 0 50px;	/*上下、左右へのブロック内の余白*/
+	padding: 0 50px;	
 }
 
-/*menu.htmlの画像配置のコンパクトメニュー部分
----------------------------------------------------------------------------*/
-/*１個あたりのボックス*/
+
 .list {
-	width: 23%;				/*ボックスの幅*/
-	margin-right: 2.66%;	/*ボックス同士の左右間の余白。ボックスを4列並べるので、23%×4個=92%。100%との差の8%分をボックス間にある余白3個分で割った数字がここに入ります。※下の「.list:nth-of-type(2n)」の数字と合わせる。*/
-	margin-bottom: 25px;	/*ボックス同士の上下間の余白*/
+	width: 23%;				
+	margin-right: 2.66%;	
+	margin-bottom: 25px;	
 }
 
-/*2の倍数(偶数番目)のボックスへの追加指定*/
 .list:nth-of-type(2n) {
-	margin-right: 2.66%;	/*上のlistのmargin-rightと数字を合わせる。小さな端末向けで0になっているのを上書きしています。*/
+	margin-right: 2.66%;	
 }
 
-/*4の倍数のボックスへの追加指定*/
 .list:nth-of-type(4n) {
-	margin-right: 0;	/*右側のスペースをなくす設定*/
+	margin-right: 0;	
 }
 
-/*トップページの「今週のランチ」ブロック
----------------------------------------------------------------------------*/
-/*写真とメニュー解説テキストを囲むブロック*/
+
 .list2 {
-	flex-direction: row;	/*子要素を横並びにする*/
-	margin-bottom: 100px;	/*下に空けるスペース*/
+	flex-direction: row;	
+	margin-bottom: 100px;	
 }
 
-/*偶数番目のlist2ブロック*/
+
 .list2:nth-of-type(even) {
-	flex-direction: row-reverse;	/*配置を左右逆にする*/
+	flex-direction: row-reverse;	
 }
 
-/*list2ブロック内のfigureタグ。写真を囲むブロック。*/
+
 .list2 figure {
-	width: 48%;	/*幅*/
+	width: 48%;	
 }
 
-/*list2内のtextブロック*/
+
 .list2 .text {
-	width: 48%;	/*幅*/
+	width: 48%;	
 }
 
-/*テーブル
----------------------------------------------------------------------------*/
-/*テーブル１行目に入った見出し部分（※caption）*/
+
 .ta1 caption {
-	padding: 20px 15px;		/*上下、左右へのボックス内の余白*/
+	padding: 20px 15px;		
 }
 
-/*th（左側）、td（右側）の共通設定*/
+
 .ta1 th, .ta1 td {
-	padding: 20px 15px;		/*上下、左右へのボックス内の余白*/
+	padding: 20px 15px;		
 }
 
-/*th（左側）のみの設定*/
+
 .ta1 th {
-	width: 20%;		/*幅*/
+	width: 20%;		
 }
+	*/
 	
 
 	
@@ -648,7 +640,7 @@ section + section {
 	height: 370px;			/*ボックスの高さ。*/
 }
 /*写真の設定*/
-.lis figure img {
+.list figure img {
 	display: block;
 	border-radius: 50%;		/*円形にする設定。30pxなどにすると角丸になります。この行を削除すればそのままの画像が表示されます。*/
 	margin-bottom: 10px;	/*画像の下に空けるスペース*/
