--- a/style.css
+++ b/style.css
@@ -105,9 +105,9 @@ a:hover {
 /*container。サイト全体を囲むブロック。
 ---------------------------------------------------------------------------*/
 #container {
-	margin:0;
+	margin: 0 auto;
 	max-width: 1400px;	/*最大幅。これ以上幅が広がらないように。*/
-	padding: 0;	/*上下、左右へのブロック内の余白*/
+	padding: 0 10px;	/*上下、左右へのブロック内の余白*/
 }
 
 /*headerブロック（ロゴが入った最上段のブロック）
