--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 nav{
-	line-height: 1.8;		/*行間*/
+	line-height: 2;		/*行間*/
 }
 
 h4,
@@ -105,9 +105,9 @@ a:hover {
 /*container。サイト全体を囲むブロック。
 ---------------------------------------------------------------------------*/
 #container {
-	margin: 0 auto;
+	margin:0;
 	max-width: 1400px;	/*最大幅。これ以上幅が広がらないように。*/
-	padding: 0 10px;	/*上下、左右へのブロック内の余白*/
+	padding: 0;	/*上下、左右へのブロック内の余白*/
 }
 
 /*headerブロック（ロゴが入った最上段のブロック）
@@ -559,73 +559,81 @@ ul.icon img:hover {
 @media screen and (min-width:800px) {
 
 
-/*
-	
+/*全体の設定
+---------------------------------------------------------------------------*/
 html, body {
-	font-size: 18px;	
+	font-size: 18px;	/*基準となるフォントサイズの上書き*/
 }
 
-
+/*section全般の設定*/
 section + section {
-	padding-top: 50px;	
+	padding-top: 50px;	/*sectionの間に空けるスペース*/
 }
 
-
+/*container。サイト全体を囲むブロック。
+---------------------------------------------------------------------------*/
 #container {
-	padding: 0 50px;	
+	padding: 0 50px;	/*上下、左右へのブロック内の余白*/
 }
 
-
+/*menu.htmlの画像配置のコンパクトメニュー部分
+---------------------------------------------------------------------------*/
+/*１個あたりのボックス*/
 .list {
-	width: 23%;				
-	margin-right: 2.66%;	
-	margin-bottom: 25px;	
+	width: 23%;				/*ボックスの幅*/
+	margin-right: 2.66%;	/*ボックス同士の左右間の余白。ボックスを4列並べるので、23%×4個=92%。100%との差の8%分をボックス間にある余白3個分で割った数字がここに入ります。※下の「.list:nth-of-type(2n)」の数字と合わせる。*/
+	margin-bottom: 25px;	/*ボックス同士の上下間の余白*/
 }
 
+/*2の倍数(偶数番目)のボックスへの追加指定*/
 .list:nth-of-type(2n) {
-	margin-right: 2.66%;	
+	margin-right: 2.66%;	/*上のlistのmargin-rightと数字を合わせる。小さな端末向けで0になっているのを上書きしています。*/
 }
 
+/*4の倍数のボックスへの追加指定*/
 .list:nth-of-type(4n) {
-	margin-right: 0;	
+	margin-right: 0;	/*右側のスペースをなくす設定*/
 }
 
-
+/*トップページの「今週のランチ」ブロック
+---------------------------------------------------------------------------*/
+/*写真とメニュー解説テキストを囲むブロック*/
 .list2 {
-	flex-direction: row;	
-	margin-bottom: 100px;	
+	flex-direction: row;	/*子要素を横並びにする*/
+	margin-bottom: 100px;	/*下に空けるスペース*/
 }
 
-
+/*偶数番目のlist2ブロック*/
 .list2:nth-of-type(even) {
-	flex-direction: row-reverse;	
+	flex-direction: row-reverse;	/*配置を左右逆にする*/
 }
 
-
+/*list2ブロック内のfigureタグ。写真を囲むブロック。*/
 .list2 figure {
-	width: 48%;	
+	width: 48%;	/*幅*/
 }
 
-
+/*list2内のtextブロック*/
 .list2 .text {
-	width: 48%;	
+	width: 48%;	/*幅*/
 }
 
-
+/*テーブル
+---------------------------------------------------------------------------*/
+/*テーブル１行目に入った見出し部分（※caption）*/
 .ta1 caption {
-	padding: 20px 15px;		
+	padding: 20px 15px;		/*上下、左右へのボックス内の余白*/
 }
 
-
+/*th（左側）、td（右側）の共通設定*/
 .ta1 th, .ta1 td {
-	padding: 20px 15px;		
+	padding: 20px 15px;		/*上下、左右へのボックス内の余白*/
 }
 
-
+/*th（左側）のみの設定*/
 .ta1 th {
-	width: 20%;		
+	width: 20%;		/*幅*/
 }
-	*/
 	
 
 	
@@ -683,4 +691,3 @@ section + section {
 /*　※注意！　下の閉じカッコ　}　は800px以上の設定に必要なので、うっかり削除しないように。　*/
 
 }
-
