--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 nav{
-	line-height: 2;		/*行間*/
+	line-height: 1.8;		/*行間*/
 }
 
 h4,
@@ -61,6 +61,10 @@ h4,
 	color:#b36d4d;
 	padding-top:5px;
 	padding-bottom:5px;
+	border: none;
+	max-width: 100%;
+	height: auto;
+	vertical-align: middle;
 }
 
 /*マージンのリセット*/
