--- a/style.css
+++ b/style.css
@@ -67,6 +67,21 @@ h4,
 	vertical-align: middle;
 }
 
+.return-button{
+	width:300px;
+	line-height:50px;
+	border-radius:5px;
+	background:skyblue;
+	color:#fff;
+	text-align:center;
+	margin:auto;
+	transition:300ms;
+}
+
+.return-button:hover{
+	transform:scale(1.2,1.2);
+}	
+
 /*マージンのリセット*/
 figure {margin: 0;}
 dd {margin: 0;}
