--- a/style.css
+++ b/style.css
@@ -71,8 +71,8 @@ h4,
 	width:300px;
 	line-height:50px;
 	border-radius:5px;
-	background:#fff3de;
-	color:#b36d4d;
+	background:#fff;
+	color:#6a171;
 	text-align:center;
 	margin:auto;
 	transition:300ms;
