--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h4,
 	line-height:50px;
 	border-radius:5px;
 	background:#fff;
-	color:#6a1917;
+	color:black;
 	text-align:center;
 	margin:auto;
 	transition:300ms;
