--- a/style.css
+++ b/style.css
@@ -666,6 +666,15 @@ section + section {
 	margin: 0 2.5% 20px;	/*上、左右、下へのボックス内の余白*/
 	height: 370px;			/*ボックスの高さ。*/
 }
+	
+.crs{
+	position: relative;overflow: hidden;
+	float: left;	/*左に回り込み*/
+	width: 20%;		/*ボックスの幅*/
+	margin: 0 3.3% 20px;	/*上、左右、下へのボックス内の余白*/
+	height: 370px;			/*ボックスの高さ。*/
+}
+	
 /*写真の設定*/
 .list figure img {
 	display: block;
