--- a/style.css
+++ b/style.css
@@ -669,6 +669,8 @@ section + section {
 	
 .crs{
 	position: relative;overflow: hidden;
+	display:flex;
+	justify-content:center;
 	float: left;	/*左に回り込み*/
 	width: 20%;		/*ボックスの幅*/
 	margin: 0 7% 20px;	/*上、左右、下へのボックス内の余白*/
