--- a/style.css
+++ b/style.css
@@ -667,13 +667,17 @@ section + section {
 	height: 370px;			/*ボックスの高さ。*/
 }
 	
+.crs1{
+	width:100%;
+}
+	
 .crs{
 	position: relative;overflow: hidden;
 	display:flex;
 	justify-content:center;
 	float: left;	/*左に回り込み*/
 	width: 20%;		/*ボックスの幅*/
-	margin: 0 7% 20px;	/*上、左右、下へのボックス内の余白*/
+	margin: 0 10% 20px;	/*上、左右、下へのボックス内の余白*/
 	height: 370px;			/*ボックスの高さ。*/
 }
 	
